--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,19 @@
+body.light-mode {
+  .logo {
+    a {
+      color: black;
+    }
+  }
+}
+body.dark-mode {
+  .logo {
+    a {
+      color: #eeeeee;
+    }
+  }
+}
+
+
 //Header
 .header-container {
   padding-left: env(safe-area-inset-left);
@@ -23,7 +39,6 @@ header {
   min-width: 300px;
   z-index: 10;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.445);
-  background-color: #ffffff;
   .inner-header {
     display: flex;
     align-items: center;
@@ -36,13 +51,14 @@ header {
       height: 50px;
     }
     .logo {
+      display: flex;
       a {
         font-size: x-large;
         font-weight: 800;
         text-decoration: none;
         letter-spacing: 2px;
-        color: black;
         padding-left: 15px;
+        transition: color 1s ease-in-out;
       }
     }
     .menu-container, ul {
@@ -53,7 +69,7 @@ header {
         margin: 3px;
         text-decoration: none;
         letter-spacing: 1.7px;
-        color: black;
+        transition: color 1s ease-in-out;
       }
       .button {
         margin-right: 20px;
@@ -73,7 +89,7 @@ header {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  @media only screen and (min-width: 631px) {
+  @media only screen and (min-width: 731px) {
     display: none;
   }
 }
