--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,3 +1,29 @@
+body.light-mode {
+  .project {
+    background-color: #f9fafc;
+  }
+  .tech-container {
+    border-color: rgb(65, 65, 65);
+    .tech {
+      color: rgb(65, 65, 65);
+    }
+  }
+}
+
+body.dark-mode {
+  .project {
+    background-color: #10171d;
+  }
+  .tech-container {
+    border-color: rgb(131, 131, 131);
+    .tech {
+      color: rgb(131, 131, 131);
+    }
+  }
+}
+
+
+
 .project-content {
   display: flex;
   flex-direction: column;
@@ -47,12 +73,13 @@
     .tech-container {
       display: flex;
       flex-wrap: wrap;
-      border-bottom: 1px solid rgb(65, 65, 65);
+      border-bottom: 1px solid;
+      transition: color 1s ease-in-out;
       .tech {
         margin-bottom: 10px;
         margin-right: 20px;
         font-size: 0.95em;
-        color: rgb(65, 65, 65);
+        transition: color 1s ease-in-out;
       }
     }
     .project-links {
@@ -74,8 +101,8 @@
   border-radius: 3px;
   // border: 1px solid #eaeaea;
   box-shadow: unset;
-  transition: all 300ms;
-  background-color: #f9fafc;
+  // transition: all 300ms;
+  transition: background-color 0.5s ease-in-out;
   margin-bottom: 1em;
   &:hover {
     top: -3px;
