--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -102,7 +102,7 @@ body.dark-mode {
   // border: 1px solid #eaeaea;
   box-shadow: unset;
   // transition: all 300ms;
-  transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out, top 0.3s linear, box-shadow 0.3s linear;
   margin-bottom: 1em;
   &:hover {
     top: -3px;
