--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -57,7 +57,7 @@ header {
         font-weight: 800;
         text-decoration: none;
         letter-spacing: 2px;
-        padding-left: 15px;
+        margin-left: 15px;
         transition: color 1s ease-in-out;
       }
     }
