--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -28,17 +28,17 @@ body.dark-mode {
 
 
 .navigation {
-  @media only screen and (max-width: 730px) {
+  @media only screen and (max-width: 690px) {
     display: none;
   }
   nav {
     display: flex;
     flex-direction: row;
     a {
-      margin: 0 3px;
+      // margin: 0 3px;
       text-decoration: none;
       letter-spacing: 1.7px;
-      padding: 10px;
+      padding: 9px;
       border-radius: 5px;
     }
     .dark-mode-toggle {
@@ -62,7 +62,9 @@ body.dark-mode {
     align-items: center;
     justify-content: space-between;
     padding: 5px 0px;
-    margin-bottom: 50px;
     list-style-type: none;
+  }
+  ul {
+    margin-bottom: 50px;
   }
 }
